tests/compile/fail/associated_fn.rs
use dyntable::dyntable;

fn main() {}

#[dyntable]
trait WithAssociated {
	fn associated();
}
