tests/compile/fail/associated_fn.stderr
error: missing `self` parameter
 --> tests/compile/fail/associated_fn.rs:7:2
  |
7 |     fn associated();
  |     ^^
